# user-service

./: CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  database.py  main.py
app/api/: config.py  crud.py  models.py  schemas.py  security.py  utils.py
public/: index.html
tests/: conftest.py  test_app.py  test_main.py
tests/api/: test_security.py  test_utils.py
